--- a/conda_env_new.yml
+++ b/conda_env_new.yml
@@ -1,4 +1,4 @@
-name: synchformer2
+name: synchformer_new
 channels:
   - huggingface
   - pytorch
@@ -40,17 +40,8 @@ dependencies:
   - colorama=0.4.6=pyhd8ed1ab_0
   - contourpy=1.0.5=py38hdb19cb5_0
   - cryptography=39.0.1=py38h9ce1e76_0
-  - cuda-cudart=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-runtime=11.8.0=0
-  - cudatoolkit=11.7.0=hd8887f6_10
-  - cudnn=8.2.1.32=h86fa8c9_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
-  - datasets=2.10.1=pyhd8ed1ab_0
   - dbus=1.13.18=hb2f20db_0
   - dill=0.3.6=pyhd8ed1ab_1
   - docker-pycreds=0.4.0=py_0
@@ -100,6 +91,47 @@ dependencies:
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
+  - libblas=3.9.0=12_linux64_mkl
+  - libcblas=3.9.0=12_linux64_mkl
+  - libclang=10.0.1=default_hb85057a_2
+  - libcublas=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufile=1.6.0.25=0
+  - libcurand=10.3.2.56=0
+  - libcurl=7.87.0=h91b91d3_0
+  - libcusolver=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libdeflate=1.17=h5eee18b_0
+  - libedit=3.1.20221030=h5eee18b_0
+  - libev=4.33=h516909a_1
+  - libevent=2.1.12=h8f2d780_0
+  - libffi=3.4.2=h6a678d5_6
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=12.2.0=h69a702a_19
+  - libgfortran5=12.2.0=h337968e_19
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.2=h7f8727e_0
+  - liblapack=3.9.0=12_linux64_mkl
+  - libllvm10=10.0.1=he513fc3_3
+  - libnghttp2=1.46.0=hce63b2e_0
+  - libnpp=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
+  - libpng=1.6.39=h5eee18b_0
+  - libpq=12.9=h16c4e8d_3
+  - libprotobuf=3.20.3=he621ea3_0
+  - libssh2=1.10.0=ha56f1ee_2
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.16.0=h27cfd23_0
+  - libthrift=0.15.0=hcc01f38_0
+  - libtiff=4.5.0=h6a678d5_2
+  - libunistring=0.9.10=h27cfd23_0
+  - libwebp=1.2.4=h11a3e52_1
+  - libwebp-base=1.2.4=h5eee18b_1
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=hfa300c1_0
+  - libxml2=2.9.14=h74e7548_0
+  - libxslt=1.1.35=h4e12654_0
   - lz4-c=1.9.4=h6a678d5_0
   - markdown=3.4.1=pyhd8ed1ab_0
   - markupsafe=2.1.1=py38h7f8727e_0
@@ -150,9 +182,6 @@ dependencies:
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-xxhash=3.0.0=py38h0a891b7_1
   - python_abi=3.8=2_cp38
-  - pytorch=2.0.0=py3.8_cuda11.8_cudnn8.7.0_0
-  - pytorch-cuda=11.8=h7e8668a_3
-  - pytorch-mutex=1.0=cuda
   - pytz=2022.7.1=pyhd8ed1ab_0
   - pyyaml=6.0=py38h0a891b7_4
   - qt-main=5.15.2=h327a75a_7
@@ -177,17 +206,12 @@ dependencies:
   - sympy=1.11.1=py38h578d9bd_2
   - tensorboard=1.15.0=py38_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
-  - timm=0.6.12=pyhd8ed1ab_0
   - tk=8.6.12=h1ccaba5_0
   - tokenizers=0.11.4=py38h3dcd8bd_1
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - torchaudio=2.0.0=py38_cu118
-  - torchtriton=2.0.0=py38
-  - torchvision=0.15.0=py38_cu118
   - tornado=6.1=py38h0a891b7_3
   - tqdm=4.65.0=pyhd8ed1ab_1
-  - transformers=4.27.4=py_0
   - typing-extensions=4.4.0=py38h06a4308_0
   - typing_extensions=4.4.0=py38h06a4308_0
   - urllib3=1.26.14=py38h06a4308_0
@@ -206,3 +230,4 @@ dependencies:
   - zstd=1.5.2=ha4553b6_0
   - pip:
       - av==9.0.0
+      
